<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ask Sense Demo</string>

    <string name="explanation">
        Enable or disable sensors below. Upon changes in one of the enabled sensors,
        you will receive a notification in the top bar of your phone.
    </string>

    <string name="activity">  activity sensor</string>
    <string name="location">  location sensor</string>
    <string name="presence">  reachability sensor</string>

    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="login_title">login @ Sense</string>
    <string name="register_title">register @ Sense</string>
    <string name="signin">sign in</string>
    <string name="register">register</string>
    <string name="logout">logout</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="logging_in">Trying to login…</string>
    <string name="registering">Trying to register…</string>
    <string name="welcome_user">Hello %1$s!</string>

    <string name="poll_sense_interval">poll Sense interval</string>
    <string name="sample_rate">sample rate</string>
    <string name="sync_rate">sync rate</string>

    <string name="no_login_connection">Could not login. Check your connection.</string>
    <string name="no_login_credentials">Invalid username or password.</string>
    <string name="no_login_other">Could not login. Unexpected result: %1$s</string>

    <string name="no_registration_user_exists">Could not register: user already exists.</string>
    <string name="no_registration_other">Could not register. Unexpected result: %1$s</string>

    <string name="enter_username">enter a valid username</string>
    <string name="enter_password">enter a valid password</string>
    <string name="unequal_password">passwords do not match</string>

    <string name="logged_in_as">logged in as: %1$s</string>
    <string name="confirm_logout">Really logout?</string>
    <string name="app_started">Ask Sense Demo started</string>

    <string name="state_change">state change</string>

    <string name="sync_rarely">30 min</string>
    <string name="sync_normal">5 min</string>
    <string name="sync_often">~1 min</string>
    <string name="sync_real_time">real time</string>

    <string name="sample_eco_mode">~15 min</string>
    <string name="sample_normal">~5 min</string>
    <string name="sample_often">~10 sec</string>
    <string name="sample_real_time">real time</string>

    <string name="poll_sense_5s">5 sec</string>
    <string name="poll_sense_10s">10 sec</string>
    <string name="poll_sense_30s">30 sec</string>
    <string name="poll_sense_1m">1 min</string>
    <string name="poll_sense_5m">5 min</string>


    <!-- <SENSE> -->
    <!-- OVERRIDE INTENT ACTIONS FOR BUNDLED SENSE PLATFORM (ALSO CHANGE IN MANIFEST!!) -->
    <string name="action_sense_service">nl.sense_os.demo.SENSE_SERVICE</string>
    <string name="action_sense_new_data">nl.sense_os.demo.NEW_DATA</string>
    <string name="action_sense_send_data">nl.sense_os.demo.SEND_DATA</string>
    <string name="action_sense_alive_check_alarm">nl.sense_os.CHECK_ALIVE</string>
    <string name="action_sense_data_transmit_alarm">nl.sense_os.demo.TRANSMIT_DATA</string>
    <string name="action_sense_new_requirements">nl.sense_os.demo.NEW_REQUIREMENTS</string>
    <string name="action_widget_update">nl.sense_os.demo.UPDATE_APP_WIDGET</string>
    <string name="local_storage_authority">nl.sense_os.demo.LocalStorage</string>

    <!-- NOTIFICATION RESOURCES -->
    <string name="stat_notify_action">nl.sense_os.demo.NOTIFICATION</string>
    <string name="stat_notify_title">Sense Demo</string>
    <string name="stat_notify_content_off_loggedin">Meting gestopt, ingelogd als \'%s\'</string>
    <string name="stat_notify_content_off_loggedout">Meting gestopt, geen verbinding met server</string>
    <string name="stat_notify_content_on_loggedin">"Meting actief, ingelogd als \'%s\'"</string>
    <string name="stat_notify_content_on_loggedout">Meting actief, geen verbinding met server</string>
    <!-- </SENSE> -->

</resources>
