<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical">

        <TextView
            android:id="@+id/reg_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/red"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:paddingBottom="12dp"
            android:paddingLeft="5dp"
            android:textSize="22dp"/>

        <EditText
            android:id="@+id/reg_username"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/reg_password1"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/reg_password2"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"/>

        <Button
            android:id="@+id/reg_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

    </LinearLayout>

</ScrollView>
