<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/app_name"
                android:paddingBottom="15dp"
                android:textSize="28dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:paddingBottom="15dp"
                android:contentDescription="@string/app_name"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/explanation"
            android:paddingBottom="15dp"
            android:textSize="16dp"/>

        <CheckBox
            android:id="@+id/id_checkbox_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/id_txt_status_activity"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="48dp"
            android:paddingBottom="15dp"
            android:textSize="14dp"/>

        <CheckBox
            android:id="@+id/id_checkbox_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/id_txt_status_location"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="48dp"
            android:paddingBottom="15dp"
            android:textSize="14dp"/>

        <CheckBox
            android:id="@+id/id_checkbox_presence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presence"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/id_txt_status_presence"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="48dp"
            android:paddingBottom="15dp"
            android:textSize="14dp"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/id_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
